@@ -1,5 +1,7 @@
 2009-10-04  Graham Cobb  <g+770@cobb.uk.net>
 
+	* todo-ui.c (edit_item): Use GtkComboBox for priority and state
+
 	* list-ui.c (create_app_menu): Create Fremantle menu
 	(delete_completed_items): Correct parent window for dialog
 
